--- a/Multi_Class_Classification_Weather_TYpe.ipynb
+++ b/Multi_Class_Classification_Weather_TYpe.ipynb
@@ -3607,7 +3607,7 @@
     "- Scaling of Feature variables is important. I have used Min Max Scaler here to bring all values between 0 and 1. No need to Scale, target variable which is already encoded using label encoder\n",
     "- Explored multiple models, Logistic Regression, Naive Beyes - Multinominal Naive Beyes & Gaussian NB.\n",
     "- Used Automated Feature Elimation to reduce Covariance. \n",
-    "- Use Confusion Maxtrix to determin accuracy of predicting correct values"
+    "- Used Confusion Maxtrix to determine accuracy of predicting correct values"
    ]
   },
   {
